--- a/public/favorites.css
+++ b/public/favorites.css
@@ -25,7 +25,7 @@ nav {
 a {
     padding-right: 50px;
     text-decoration: none;
-    color: #c2c2be;
+    color: white;
     font-weight: bold;
 }
 
