--- a/public/favorites.css
+++ b/public/favorites.css
@@ -59,6 +59,13 @@ form {
 
 input {
     width: 125px;
+    text-transform: capitalize;
+}
+
+.fave-state-input {
+    width: 50px;
+    text-transform: uppercase;
+
 }
 
 button {
