--- a/public/styles.css
+++ b/public/styles.css
@@ -63,6 +63,13 @@ label {
     margin-right: 10px;
     height: 20px;
     width: 15rem;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
+
+.weather-city:focus {
+    outline: none;
 }
 
 button {
@@ -139,6 +146,13 @@ h3 {
 .new-note {
     margin-right: 10px;
     width: 20rem;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
+
+.new-note:focus {
+    outline: none;
 }
 
 .note-button {
