color change for delete button

--- a/public/favorites.css
+++ b/public/favorites.css
@@ -110,7 +110,7 @@ li:hover {
     width: 20px;
     height: 20px;
     margin-left: 10px;
-    background-color: rgb(212, 66, 66);
+    background-color: #3a5055;
 }
 
 section {
