--- a/public/favorites.css
+++ b/public/favorites.css
@@ -1,183 +1,184 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family:'Montserrat Alternates', sans-serif;
+  font-family: "Montserrat Alternates", sans-serif;
 }
 
 nav {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    height: 50px;
-    background-color: rgb(98,146,158,0.8);
-    display: flex;
-    justify-content: right;
-    align-items: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 50px;
+  background-color: rgb(98, 146, 158, 0.8);
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
 a {
-    padding-right: 50px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
+  padding-right: 50px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 a:hover {
-    font-size: larger;
-    color: #F45B69;
+  font-size: larger;
+  color: #f45b69;
 }
 
 a:active {
-    color: #6D5959;
+  color: #6d5959;
 }
 
 main {
-    display: flex;
-    height: 100vh;
-    background-color: lightblue;
+  display: flex;
+  height: 100vh;
+  background-color: lightblue;
 }
 
 aside {
-    width: 20%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-right: 2px solid grey;
-    background-color: rgb(98,146,158,0.5);
+  width: 20%;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 2px solid grey;
+  background-color: rgb(98, 146, 158, 0.5);
 }
 
 form {
-    padding: 15px;
+  padding: 15px;
 }
 
 input {
-    width: 125px;
-    text-transform: capitalize;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #000000;
+  width: 125px;
+  text-transform: capitalize;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 .fave-state-input {
-    width: 50px;
-    text-transform: uppercase;
+  width: 50px;
+  text-transform: uppercase;
 }
 
 button {
-    cursor: pointer;
-    border-radius: 16px;
-    width: 5rem;
-    background-color: #454545; /* button color */
-    color: white;
-    border: none;
-    box-shadow: 2px 2px 2px grey;
+  cursor: pointer;
+  border-radius: 16px;
+  width: 5rem;
+  background-color: #454545; /* button color */
+  color: white;
+  border: none;
+  box-shadow: 2px 2px 2px grey;
 }
 
 .fave-button {
-    width: 7rem;
+  width: 7rem;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 li {
-    margin-top: 10px;
-    color: #ffffff;
-    cursor: pointer;
-
+  margin-top: 10px;
+  color: #ffffff;
+  cursor: pointer;
 }
 
 li:hover {
-    color: #F45B69;
-    font-size: large;
+  color: #f45b69;
+  font-size: large;
 }
 
 .delete {
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    margin-left: 10px;
-    background-color: #3a5055;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  background-color: #3a5055;
 }
 
 section {
-    width: 80%;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    max-width: 100%;
-    padding-left: 150px;
-    position: fixed;
-    margin-left: 20%;
-    height: 100vh;
-    margin-top: 50px;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 100%;
+  padding-left: 8rem;
+  position: fixed;
+  margin-left: 20%;
+  height: 100vh;
+  margin-top: 50px;
 }
 
 h1 {
-    position: absolute;
-    left: 44%;
-    right: 50%;
-    color: white;
-    text-shadow: 2px 2px grey;
-    width: 200px;
-    text-align: center;
+  position: absolute;
+  left: 44%;
+  right: 50%;
+  color: white;
+  text-shadow: 2px 2px grey;
+  width: 200px;
+  text-align: center;
 }
 
 div {
-    border: 1px solid rgb(169,169,169,0.4);
-    height: 300px;
-    width: 300px;
-    background-color: rgb(169,169,169, 0.6);
-    display: flex;
-    flex-direction: column;
-    border-radius: 15%;
-    box-shadow: 2px 2px 20px 3px black;
+  border: 1px solid rgb(169, 169, 169, 0.4);
+  height: 20vw;
+  width: 20vw;
+  background-color: rgb(169, 169, 169, 0.6);
+  display: flex;
+  flex-direction: column;
+  border-radius: 15%;
+  box-shadow: 2px 2px 20px 3px black;
 }
 
-.one, .two, .three {
-    margin-top: 50px;
+.one,
+.two,
+.three {
+  margin-top: 50px;
 }
 
 h3 {
-    text-align: center;
-    padding: 15px;
-    font-weight: 500;
+  text-align: center;
+  padding: 15px;
+  font-weight: 500;
 }
 
 div > p {
-    align-self: center;
-    margin: auto;
-    text-align: center;
-    font-family: 'Fredoka One', cursive;
-    font-size: 40px;
-    color: white;
-    text-shadow: 2px 2px 5px black;
+  align-self: center;
+  margin: auto;
+  text-align: center;
+  font-family: "Fredoka One", cursive;
+  font-size: 40px;
+  color: white;
+  text-shadow: 2px 2px 5px black;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 p.copyright {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    color: white;
-    opacity: 0.5;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  color: white;
+  opacity: 0.5;
 }
