--- a/public/styles.css
+++ b/public/styles.css
@@ -1,201 +1,202 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-size: cover;
-    color: rgb(250, 248, 248)
+  background-size: cover;
+  background-repeat: repeat;
+  color: rgb(250, 248, 248);
 }
 
 html {
-    font-family:'Montserrat Alternates', sans-serif;
+  font-family: "Montserrat Alternates", sans-serif;
 }
 
 nav {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    height: 50px;
-    background-color: #62929E; 
-    display: flex;
-    justify-content: right;
-    align-items: center;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  height: 50px;
+  background-color: #62929e;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
 a {
-    padding-right: 50px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
+  padding-right: 50px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 a:hover {
-    font-size: larger;
-    color: #F45B69;
+  font-size: larger;
+  color: #f45b69;
 }
 
 a:active {
-    color: #6D5959;
+  color: #6d5959;
 }
 
 h1 {
-    text-align: center;
-    padding-top: 30px;
-    text-shadow: 2px 2px grey;
+  text-align: center;
+  padding-top: 30px;
+  text-shadow: 2px 2px grey;
 }
 
 .get-weather {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
 }
 
 label {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .weather-city {
-    margin-right: 10px;
-    height: 20px;
-    width: 15rem;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #000000;
+  margin-right: 10px;
+  height: 20px;
+  width: 15rem;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
 }
 
 .weather-city:focus {
-    outline: none;
+  outline: none;
 }
 
 button {
-    cursor: pointer;
-    border-radius: 16px;
-    width: 6rem;
-    background-color: #454545; /* button color */
-    color: white;
-    border: none;
-    box-shadow: 2px 2px 2px grey;
+  cursor: pointer;
+  border-radius: 16px;
+  width: 6rem;
+  background-color: #454545; /* button color */
+  color: white;
+  border: none;
+  box-shadow: 2px 2px 2px grey;
 }
 
 .weather-section {
-    width: 50%;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(169,169,169, 0.8);
-    margin: 20px auto 0;
+  width: 50%;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(169, 169, 169, 0.8);
+  margin: 20px auto 0;
 }
 
 .weather-title {
-    width: 100%;
-    margin-top: 20px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .temp-background {
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    background-color: #7397a0;
-    border: 2px solid black;
-    margin: 10px auto 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 2px 2px 2px 3px black;
-    opacity: 0.8;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background-color: #7397a0;
+  border: 2px solid black;
+  margin: 10px auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2px 2px 2px 3px black;
+  opacity: 0.8;
 }
 
 h3 {
-    font-size: 50px;
+  font-size: 50px;
 }
 
 .weather-info {
-    width: 100%;
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    font-size: larger;
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  font-size: larger;
 }
 
 .notes-section {
-    width: 50%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(169,169,169, 0.8);
-    margin: 20px auto 0;
+  width: 50%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(169, 169, 169, 0.8);
+  margin: 20px auto 0;
 }
 
 .notes-title {
-    width: 100%;
-    margin-top: 20px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .enter-note {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
 }
 
 .new-note {
-    margin-right: 10px;
-    width: 20rem;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #000000;
+  margin-right: 10px;
+  width: 20rem;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
 }
 
 .new-note:focus {
-    outline: none;
+  outline: none;
 }
 
 .note-button {
-    width: 5rem;
+  width: 5rem;
 }
 
 .notes {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 li {
-    color: black;
-    margin-top: 10px;
+  color: black;
+  margin-top: 10px;
 }
 
 li:last-child {
-    padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 h2 {
-    text-align: center;
-    color: black;
+  text-align: center;
+  color: black;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 p.copyright {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    color: white;
-    opacity: 0.5;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  color: white;
+  opacity: 0.5;
 }
